--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,6 +84,7 @@
     <string name="about_website">Sitio Web</string>
     <string name="about_linkedin">LinkedIn</string>
     <string name="about_github">GitHub</string>
+    <string name="about_discord">Discord</string>
     <string name="about_rate_app">Calificar App</string>
     <string name="about_contact">Contacto / Feedback</string>
     <string name="about_contact_subject">Feedback sobre KS Expire</string>
